# tcl_template

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.cfg  host.cpp  host.h  utils.mk
cmake/: FindVitis.cmake
src/: CMakeLists.txt  krnl.cpp  krnl.hpp  make.tcl.in  test_krnl.cpp
